package design_pattern.Visitor;

public interface Element {
	public abstract void accept(Visitor v);
}
